# VisualRL

./: .gitignore  AGENTS.md  README.md  pyproject.toml  readme.md
benchmarks/: bench_rl_env.py  bench_rollout.py  bench_samples_api.py  bench_state_fork.py  benchmarking.py  compare_runs.py
benchmarks/payloads/: genie_profile.json
benchmarks/results/: genie_default_baseline.json  genie_default_batched.json  genie_heavy_off.json  genie_heavy_on.json  genie_profile_baseline.json  genie_profile_batched.json
docs/: ARCHITECTURE_CRITIQUE.md  BENCHMARKING.md  ECS_EXECUTION_RUNTIME.md  GENIE_ECS_BATCHING_POLICY.md  GENIE_STAGE_RUNTIME.md  IMPLEMENTATION_PLAN_WORLD_VIDEO_INFRA.md  KERNEL_POLICY.md  NEURAL_ECS_ENGINE_DESIGN.md  REPO_ROADMAP.md  ROLLOUT_RUNTIME_REFACTOR_PLAN.md  STARTUP_STRATEGY.md  WAN_SERVING_SCAFFOLD.md  WORLD_MODEL_INFRA_ARCHITECTURE_NOTES.md
examples/: rl_train_toy_world.py
plans/: genie_ecs_status.json
tests/: real_model_helpers.py  test_algorithms.py  test_api_guardrails.py  test_artifact_store.py  test_batched_iteration_runner.py  test_bench_samples_api.py  test_benchmarking.py  test_boundary_conventions.py  test_controlplane.py  test_engine.py  test_engine_loop.py  test_genie.py  test_genie_batcher.py  test_genie_runtime.py  test_job_queue.py  test_pipeline_runner.py  test_rl_runtime.py  test_sample_store.py  test_serving_cosmos.py  test_serving_wan.py
tests/api/: test_api_guardrails.py  test_server.py
tests/backends/: test_cosmos.py  test_genie.py  test_job_queue.py  test_matrix_game.py  test_serving_primitives.py  test_wan.py
tests/benchmarks/: test_bench_reinforcement_learning_env.py  test_bench_rl_env.py  test_bench_rollout.py  test_bench_samples_api.py  test_benchmarking.py
tests/controlplane/: test_controlplane.py
tests/core/: test_engine.py  test_execution.py
tests/e2e/: helpers.py  test_serving_cosmos.py  test_serving_wan.py
tests/models/: test_cosmos_predict2_step.py  test_diffusers_t2v.py
tests/rl/: test_rl_api.py  test_rl_env.py
tests/rollouts/: test_cosmos_collector.py  test_types.py
tests/workloads/: __init__.py
vrl/adapters/: __init__.py  base.py  wan.py
vrl/algorithms/: base.py  flow_matching.py  grpo.py  stat_tracking.py  types.py
vrl/engine/: __init__.py  interfaces.py  protocols.py  types.py
vrl/evaluators/: __init__.py  base.py  types.py
vrl/experience/: __init__.py
vrl/models/: base.py
vrl/rollouts/: __init__.py  types.py
vrl/scripts/: train_wan_grpo.py
vrl/trainers/: __init__.py  online.py  types.py
wm_infra/: __init__.py  benchmarking.py  config.py
wm_infra/api/: metrics.py  protocol.py  server.py
wm_infra/backends/: __init__.py  _pipeline.py  base.py  genie.py  genie_batcher.py  genie_checkpoint.py  genie_persist.py  (+6 more)
(+586 files in other folders)
