[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wm-infra"
version = "0.1.0"
description = "Serving and control-plane infrastructure for video generation and world-model workloads"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.2.0",
    "triton>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "einops>=0.7.0",
    "prometheus-client>=0.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
bench = [
    "matplotlib>=3.8.0",
    "tabulate>=0.9.0",
]

[project.scripts]
wm-serve = "wm_infra.api.server:main"

[tool.setuptools.packages.find]
include = ["wm_infra*"]
